--- a/src/app/sendsmsadmin/sendsmsadmin.component.html
+++ b/src/app/sendsmsadmin/sendsmsadmin.component.html
@@ -1,5 +1,5 @@
 <div id="page-toshow">
-    <h1 class="page-title text-center">שליחת הודעות הנהלה</h1>
+    <h1 *ngIf="toShow=='true'" class="page-title text-center">שליחת הודעות הנהלה</h1>
     <div class="container-fluid">
         <div class="row">
             <div class="col">
@@ -11,14 +11,13 @@
                                     <div class="form-group">
                                         <mat-form-field>
                                             <textarea
-                                                required
                                                 matInput
                                                 autocomplete="off"
                                                 placeholder="תוכן הודעה"
                                                 name="smsText"
                                                 rows="17"
-                                                formControlName="smsText"
-                                                >{{ smsText }}</textarea
+                                                formControlName="smsText" [value]="smsText"
+                                                ></textarea
                                             >
                                         </mat-form-field>
                                     </div>
@@ -29,14 +28,13 @@
                                     <div class="form-group">
                                         <mat-form-field>
                                             <textarea
-                                                required
                                                 matInput
                                                 autocomplete="off"
                                                 placeholder="מס' טלפון"
                                                 name="smsNumbers"
                                                 rows="17"
-                                                formControlName="smsNumbers"
-                                                >{{ smsNumbers }}</textarea
+                                                formControlName="smsNumbers" [value]="smsNumbers"
+                                                ></textarea
                                             >
                                         </mat-form-field>
                                     </div>
